style: Add media query for mobile and Fix footer spacing

--- a/src/style.css
+++ b/src/style.css
@@ -136,7 +136,7 @@ body {
 }
 
 footer {
-  padding: var(--spacing-6) var(--spacing-0);
+  padding: var(--spacing-6) var(--spacing-2);
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-wrapper);
 }
@@ -341,6 +341,7 @@ a:focus {
 }
 
 .slider-content-text {
+  padding-right: var(--spacing-6);
   width: 65%;
 }
 
@@ -465,5 +466,16 @@ a:focus {
   ul,
   ol {
     list-style-position: inside;
+  }
+}
+@media (max-width: 558px) {
+  .slider-content {
+    padding: var(--spacing-8) var(--spacing-0);
+    flex-direction: column-reverse;
+  }
+  .slider-content-text {
+    padding-right: var(--spacing-0);
+    padding-top: var(--spacing-6);
+    width: 80%;
   }
 }
